<?xml version="1.0"?>
<package format="2">
  <name>robosense_description</name>
  <version>1.0.0</version>
  <description>
    URDF and meshes describing Robosense laser scanners.
  </description>

  <license>BSD</license>
  <author>Thomas SIMON</author>
  <maintainer email="thomas.simon@ensta-paris.fr">Thomas SIMON</maintainer>
  <url type="website">http://wiki.ros.org/robosense_description</url>
  <!--url type="repository"></url>
  <url type="bugtracker"></url-->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
