<?xml version="1.0"?>
<package format="3">
  <name>robosense_description</name>
  <version>2.0.0</version>
  <description>
    URDF and meshes describing Robosense laser scanners.
  </description>

  <license>BSD</license>
  <author>Jerome Justin</author>
  <maintainer email="jerome.justin@sydney.edu.au">Jerome Justin</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
