<?xml version="1.0"?>
<package format="3">
  <name>robosense_gazebo_plugins</name>
  <version>2.0.0</version>
  <description>
    Gazebo plugin to provide simulated data from Robosense laser scanners.
  </description>

  <license>BSD</license>
  <author>Jerome Justin</author>
  <maintainer email="jerome.justin@sydney.edu.au">Jerome Justin</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
